--- a/ai_project/src/main/resources/templates/memberManager/signin.html
+++ b/ai_project/src/main/resources/templates/memberManager/signin.html
@@ -76,11 +76,11 @@
     <span th:text="${signupMessage}"></span>
   </p>
   <form th:action="@{/login}" method="post">
-    <label for="userId">아이디</label>
-    <input type="text" id="userId" name="userId" placeholder="아이디를 입력하세요" required>
+    <label for="username">아이디</label>
+    <input type="text" id="username" name="username" required>
 
-    <label for="userPass">비밀번호</label>
-    <input type="password" id="userPass" name="userPass" placeholder="비밀번호를 입력하세요" required>
+    <label for="password">비밀번호</label>
+    <input type="password" id="password" name="password" required>
 
     <button type="submit">로그인</button>
   </form>
